flux/infrastructure/kyverno/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kyverno
  labels:
    app.kubernetes.io/name: kyverno
    app.kubernetes.io/managed-by: flux
    environment: home
